--- a/BaczekKPAI.vcproj
+++ b/BaczekKPAI.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="TestAI"
+	Name="BaczekKPAI"
 	ProjectGUID="{9E0389D1-EA85-471D-A3E1-35335E5038E5}"
-	RootNamespace="TestAI"
+	RootNamespace="BaczekKPAI"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -43,7 +43,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\rts\bagge\aidll/TestAI.tlb"
+				TypeLibraryName=".\..\rts\bagge\aidll/BaczekKPAI.tlb"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -55,7 +55,7 @@
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				FloatingPointModel="2"
-				PrecompiledHeaderFile=".\Release/TestAI.pch"
+				PrecompiledHeaderFile=".\Release/BaczekKPAI.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
@@ -139,7 +139,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/TestAI.tlb"
+				TypeLibraryName=".\Debug/BaczekKPAI.tlb"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
@@ -151,7 +151,7 @@
 				RuntimeLibrary="1"
 				FloatingPointModel="2"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/TestAI.pch"
+				PrecompiledHeaderFile=".\Debug/BaczekKPAI.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
@@ -182,10 +182,10 @@
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_dll&quot;"
 				ModuleDefinitionFile="BaczekKPAI.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/TestAI.pdb"
+				ProgramDatabaseFile=".\Debug/BaczekKPAI.pdb"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\Debug/TestAI.lib"
+				ImportLibrary=".\Debug/BaczekKPAI.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
