--- a/BaczekKPAI.vcproj
+++ b/BaczekKPAI.vcproj
@@ -82,7 +82,7 @@
 				OutputFile="$(OutDir)\SkirmishAI.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_dll&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(PYTHON_DIR)\libs&quot;"
+				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_dll&quot;;&quot;$(BOOST_ROOT)\stage\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(PYTHON_DIR)\libs&quot;"
 				ModuleDefinitionFile="BaczekKPAI.def"
 				GenerateDebugInformation="true"
 				RandomizedBaseAddress="1"
@@ -179,7 +179,7 @@
 				Version="0.1"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_dll&quot;;&quot;$(PYTHON_DIR)\libs&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_dll&quot;;&quot;$(PYTHON_DIR)\libs&quot;;&quot;$(BOOST_ROOT)\stage\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
 				ModuleDefinitionFile="BaczekKPAI.def"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/BaczekKPAI.pdb"
