--- a/BaczekKPAI.vcproj
+++ b/BaczekKPAI.vcproj
@@ -50,7 +50,7 @@
 				AdditionalOptions="/EHsc"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)..\..\..\rts&quot;;&quot;$(ProjectDir)..\..\Wrappers&quot;;&quot;$(ProjectDir)..\..\..\rts\System&quot;;&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\include\msvc&quot;;&quot;$(BOOST_ROOT)&quot;;&quot;$(PYTHON_DIR)\include&quot;"
-				PreprocessorDefinitions="WIN32;_WINDOWS;_USRDLL;TESTAI_EXPORTS;BUILDING_SKIRMISH_AI;BUILDING_AI;WINVER=0x0400;__WXMSW__;WXUSINGDLL;wxUSE_GUI=1;wxUSE_GLCANVAS=0;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_UNICODE"
+				PreprocessorDefinitions="WIN32;_WINDOWS;_USRDLL;TESTAI_EXPORTS;BUILDING_SKIRMISH_AI;BUILDING_AI;WINVER=0x0400;__WXMSW__;WXUSINGDLL;wxUSE_GUI=1;wxUSE_GLCANVAS=0;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_UNICODE;_SCL_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
