taught the AI how to dispatch packets

--- a/BaczekKPAI.vcproj
+++ b/BaczekKPAI.vcproj
@@ -352,6 +352,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\KPCommands.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Log.h"
 				>
 			</File>
